// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`webpack-tests 1. extracts to a div for simple views, flat transforms 1`] = `
<span
  className="t_light t_Theme"
  style={
    Object {
      "color": "var(--color)",
      "display": "contents",
    }
  }
>
  <div
    className=" _fd-1fwxi70 _boxs-1pkamc3 _fb-16z0p9w _disp-sczph7 _ai-o35pey _transform-0hover-14qtav5 _bc-14dge63 _btlr-19aexhz _btrr-1cetw7o _bbrr-1u6l2ki _bblr-g2ppwp _fg-15m5m9x _fs-vf3l73 test1 "
  >
    <span
      className=" _ww-fl0oek _boxs-1pkamc3 _fofam-1f039uq _disp-1ffesbf "
    >
      hello world
    </span>
  </div>
</span>
`;

exports[`webpack-tests 2. extracts className for complex views but keeps other props 1`] = `
<span
  className="t_light t_Theme"
  style={
    Object {
      "color": "var(--color)",
      "display": "contents",
    }
  }
>
  <div
    className=" _fd-1w148es _boxs-1pkamc3 _fb-16z0p9w _disp-sczph7 _fs-vf3l72 _ai-o35pey _ovx-wili9s _ovy-1b6zsht who "
    onClick={[Function]}
  />
  <div
    className="_fd-1w148es _boxs-1pkamc3 _fb-16z0p9w _disp-sczph7 _fs-vf3l72 _ai-o35pey _pt-bv6gfq _pb-15pd76m ease-in-out-top _bc-8deqv3 _t-1i99i3n "
  >
    <span
      className=" _ww-fl0oek _boxs-1pkamc3 _fofam-1f039uq _disp-1ffesbf "
    >
      hello world
    </span>
  </div>
</span>
`;

exports[`webpack-tests 2. extracts className for complex views but keeps other props 2`] = `
<span
  className="t_light t_Theme"
  style={
    Object {
      "color": "var(--color)",
      "display": "contents",
    }
  }
>
  <div
    className=" _fd-1w148es _boxs-1pkamc3 _fb-16z0p9w _disp-sczph7 _fs-vf3l72 _ai-o35pey _ovx-wili9s _ovy-1b6zsht who "
    onClick={[Function]}
  />
  <div
    className="_fd-1w148es _boxs-1pkamc3 _fb-16z0p9w _disp-sczph7 _fs-vf3l72 _ai-o35pey _t-1ko9whv _pt-bv6gfq _pb-15pd76m _bc-1idqk49 ease-in-out-top "
  >
    <span
      className=" _ww-fl0oek _boxs-1pkamc3 _fofam-1f039uq _disp-1ffesbf "
    >
      hello world
    </span>
  </div>
</span>
`;

exports[`webpack-tests 3. places className correctly given a single spread 1`] = `
Array [
  "t_light",
  "t_Theme",
]
`;

exports[`webpack-tests 4. leaves dynamic variables 1`] = `
Array [
  "t_light",
  "t_Theme",
]
`;

exports[`webpack-tests 4. leaves dynamic variables 2`] = `
<span
  className="t_light t_Theme"
  style={
    Object {
      "color": "var(--color)",
      "display": "contents",
    }
  }
>
  <span
    className="t_Hoverable "
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    style={
      Object {
        "display": "contents",
      }
    }
  >
    <div
      className="is_YStack   _fd-1fwxi70 _boxs-1pkamc3 _fb-16z0p9w _disp-sczph7 _fs-vf3l72 _ai-o35pey _ovx-0hover-67htlo _ovy-0hover-z14anv _h-1h8ilpv _fd-1fwxi70 _boxs-1pkamc3 _fb-16z0p9w _disp-sczph7 _fs-vf3l72 _ai-o35pey _ovx-0hover-67htlo _ovy-0hover-z14anv _h-1h8ilpv"
      onClick={null}
      onMouseDown={null}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      style={
        Object {
          "width": "calc(100% + 20px)",
        }
      }
    />
  </span>
</span>
`;

exports[`webpack-tests 5. spread conditional 1`] = `
<span
  className="t_light t_Theme"
  style={
    Object {
      "color": "var(--color)",
      "display": "contents",
    }
  }
>
  <div
    className="_ovx-wili9s _ovy-1b6zsht _fd-1fwxi70 _boxs-1pkamc3 _fb-16z0p9w _disp-sczph7 _fs-vf3l72 _ai-o35pey _bc-qa5arf "
  >
    <div
      className="_fd-1fwxi70 _boxs-1pkamc3 _fb-16z0p9w _disp-sczph7 _fs-vf3l72 _ai-o35pey _ovx-wili9s _ovy-1b6zsht hello-world _bc-qa5arf "
    />
  </div>
</span>
`;

exports[`webpack-tests 6. spread ternary 1`] = `
<span
  className="t_light t_Theme"
  style={
    Object {
      "color": "var(--color)",
      "display": "contents",
    }
  }
>
  <div
    className="_ovx-wili9s _ovy-1b6zsht _fd-1fwxi70 _boxs-1pkamc3 _fb-16z0p9w _disp-sczph7 _fs-vf3l72 _ai-o35pey _bc-qa5arf "
  >
    <span
      className=" _ww-fl0oek _boxs-1pkamc3 _fofam-1f039uq _disp-1ffesbf "
    >
      hello world
    </span>
  </div>
</span>
`;

exports[`webpack-tests 6. spread ternary 2`] = `
<span
  className="t_light t_Theme"
  style={
    Object {
      "color": "var(--color)",
      "display": "contents",
    }
  }
>
  <div
    className="_ovx-wili9s _ovy-1b6zsht _fd-1fwxi70 _boxs-1pkamc3 _fb-16z0p9w _disp-sczph7 _fs-vf3l72 _ai-o35pey _bc-14dge63 "
  >
    <span
      className=" _ww-fl0oek _boxs-1pkamc3 _fofam-1f039uq _disp-1ffesbf "
    >
      hello world
    </span>
  </div>
</span>
`;

exports[`webpack-tests 7. ternary + data-is 1`] = `
<span
  className="t_light t_Theme"
  style={
    Object {
      "color": "var(--color)",
      "display": "contents",
    }
  }
>
  <div
    className=" _maw-ao3bza _miw-1iut4tl _w-1c389nj _pb-eaa8lf _pr-1af659v _pl-cem7z4 _fd-1fwxi70 _boxs-1pkamc3 _fb-16z0p9w _disp-sczph7 _fs-vf3l72 _ai-o35pey "
  >
    <div
      className="_fd-1fwxi70 _boxs-1pkamc3 _fb-16z0p9w _disp-sczph7 _fs-vf3l72 _ai-o35pey _h-omojda _w-1y5ry99 "
    />
  </div>
</span>
`;

exports[`webpack-tests 8. styleExpansions 1`] = `
<span
  className="t_light t_Theme"
  style={
    Object {
      "color": "var(--color)",
      "display": "contents",
    }
  }
>
  <div
    className=" _b-14cfui5 _r-1ba2x7g _l-wzdu9 _t-1ko9whv _pos-1ypdr05 _fd-1fwxi70 _boxs-1pkamc3 _fb-16z0p9w _disp-sczph7 _fs-vf3l72 _ai-o35pey "
  >
    <div
      className=" _bc-14dge63 _fd-1fwxi70 _boxs-1pkamc3 _fb-16z0p9w _disp-sczph7 _fs-vf3l72 _ai-o35pey "
    >
      <div
        className="is_YStack   _fd-1fwxi70 _boxs-1pkamc3 _fb-16z0p9w _disp-sczph7 _fs-vf3l72 _ai-o35pey _b-14cfui5 _r-1ba2x7g _l-wzdu9 _t-1ko9whv _pos-1ypdr05 _bc-8deqv3 _fd-1fwxi70 _boxs-1pkamc3 _fb-16z0p9w _disp-sczph7 _fs-vf3l72 _ai-o35pey _b-14cfui5 _r-1ba2x7g _l-wzdu9 _t-1ko9whv _pos-1ypdr05 _bc-8deqv3"
        color="blue"
        style={Object {}}
      />
    </div>
  </div>
</span>
`;

exports[`webpack-tests 9. combines with classname 1`] = `
<span
  className="t_light t_Theme"
  style={
    Object {
      "color": "var(--color)",
      "display": "contents",
    }
  }
>
  <div
    className=" _pt-coy0ts _pb-eaacaw _fd-1fwxi70 _boxs-1pkamc3 _fb-16z0p9w _disp-sczph7 _fs-vf3l72 _ai-o35pey home-top-dish "
  />
</span>
`;

exports[`webpack-tests 10. extracts Text 1`] = `
<span
  className="t_light t_Theme"
  style={
    Object {
      "color": "var(--color)",
      "display": "contents",
    }
  }
>
  <span
    className=" _fos-1y4y6hj _ww-fl0oek _boxs-1pkamc3 _fofam-1f039uq _disp-1ffesbf "
  >
    <span
      className=" _cur-1gpc3n _ussel-1k4z3v8 _ww-fl0oek _boxs-1pkamc3 _fofam-1f039uq _disp-1ffesbf "
    >
      <span
        className="is_Text   _ww-fl0oek _boxs-1pkamc3 _fofam-1f039uq _disp-1ffesbf _col-19za413   _fos-1y4ya70 _fow-1lznmb3 _ww-fl0oek _boxs-1pkamc3 _fofam-1f039uq _disp-1ffesbf _col-19za413   _fos-1y4ya70 _fow-1lznmb3"
        style={Object {}}
      >
        hello
      </span>
    </span>
  </span>
</span>
`;

exports[`webpack-tests 11. combines everything 1`] = `
Array [
  "t_light",
  "t_Theme",
]
`;

exports[`webpack-tests 12. ternary multiple on same key 1`] = `
<span
  className="t_light t_Theme"
  style={
    Object {
      "color": "var(--color)",
      "display": "contents",
    }
  }
>
  <div
    className="_fd-1fwxi70 _boxs-1pkamc3 _fb-16z0p9w _disp-sczph7 _fs-vf3l72 _ai-o35pey _transform-heqauk _o-1omt5za "
  />
</span>
`;

exports[`webpack-tests 14. extracts pseudo styles and evaluates constants 1`] = `
<span
  className="t_light t_Theme"
  style={
    Object {
      "color": "var(--color)",
      "display": "contents",
    }
  }
>
  <div
    className=" _bc-0hover-14dge63 _bc-0active-qa5arf _fd-1fwxi70 _boxs-1pkamc3 _fb-16z0p9w _disp-sczph7 _fs-vf3l72 _ai-o35pey "
  />
</span>
`;

exports[`webpack-tests 15. extracts spacer (complex expansion) 1`] = `
<span
  className="t_light t_Theme"
  style={
    Object {
      "color": "var(--color)",
      "display": "contents",
    }
  }
>
  <div
    className=" _mih-1hvl722 _miw-ybb273 _h-1gthy98 _w-1iwgs19 _boxs-1pkamc3 _fb-16z0p9w _disp-sczph7 _fs-vf3l72 _ai-o35pey "
  />
  <div
    className=" _mih-zdmyo0 _miw-1igugvv _h-omojda _w-1y5ry99 _fg-15m5m9x _fs-vf3l73 _boxs-1pkamc3 _fb-16z0p9w _disp-sczph7 _ai-o35pey "
  />
</span>
`;

exports[`webpack-tests 16. deopt when spreading multiple 1`] = `
<span
  className="t_light t_Theme"
  style={
    Object {
      "color": "var(--color)",
      "display": "contents",
    }
  }
>
  <div
    className="is_YStack   _fd-1fwxi70 _boxs-1pkamc3 _fb-16z0p9w _disp-sczph7 _fs-vf3l73 _ai-o35pey _fg-15m5m9x _bc-14dge63   _fd-1fwxi70 _boxs-1pkamc3 _fb-16z0p9w _disp-sczph7 _fs-vf3l73 _ai-o35pey _fg-15m5m9x _bc-14dge63  "
    conditional={true}
    style={Object {}}
  />
</span>
`;
